# NetworkDataSecurityScanner

./: Makefile  README.md  pyproject.toml  requirements.txt
docs/: ModelMetrics.txt
models/: lightgbm_random_oversample_model_metrics.csv  lightgbm_random_oversample_model_metrics.txt
notebooks/: DataWrangling.ipynb  EDA.ipynb  Modeling.ipynb  Preprocessing.ipynb
