[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "networkdatasecurityscanner"
version = "0.0.1"
description = "Develop a machine learning model that can accurately detect and classify network attacks using the CIC-UNSW-NB15 dataset."
authors = [
  { name = "Tanner Antons" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.14.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["networkdatasecurityscanner"]
force_sort_within_sections = true


